# tonalflex-template-plugin

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: publish-ui.yml  release.yml
cmake/: cpm.cmake  linux-toolchain.cmake
plugin/: CMakeLists.txt  sushi-config.json
plugin-ui/: README.md  package-lock.json  package.json  vite.config.ts
plugin-ui/src/: App.vue  index.ts  main.ts
plugin-ui/src/backend/: IAudioBackend.ts  JuceBackend.ts
plugin-ui/src/components/: Plugin.vue
plugin-ui/src/components/controls/: SliderControl.vue
plugin-ui/src/composables/: useAudioBackend.ts  useParameter.ts  useSliderParameter.ts
plugin/include/: plugin_editor.h  plugin_processor.h
plugin/src/: plugin_editor.cpp  plugin_processor.cpp
script/: build-arm64-headless.sh  build-elk-plugin.sh  build-linux-plugin.sh  linux.Dockerfile
test/: CMakeLists.txt
test/src/: test_audio_processor.cpp
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.build.json  tsconfig.build.npm.json  vite.config.ts
ui/public/: metadata.json
ui/src/: App.vue  index.ts  style.css
ui/src/backend/: IAudioBackend.ts  JuceBackend.ts  MockBackend.ts
ui/src/components/: Plugin.vue
ui/src/composables/: useAudioBackend.ts  useFunction.ts
ui/src/types/: juce-framework-frontend.d.ts
